# growpy

./: .coverage  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .zenodo.json  AGENTS.md  ANALYSIS_COMPLETE.txt  BEFORE_AFTER_COMPARISON.md  BONE_HIERARCHY_FIX.md  BUDDEVELOPMENT_FIX_GUIDE.md  BUDEVELOPMENT_CRASH_ANALYSIS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CLEANUP_ANALYSIS.md  CLEANUP_COMPLETE.md  COMMIT_SUMMARY.md  CONTRIBUTING.md  COORDINATE_FIX_SAFETY.md  COORDINATE_FIX_SUMMARY.md  COORDINATE_SYSTEM_CORRECTED.md  COORDINATE_SYSTEM_FIX.md  COORDINATE_SYSTEM_UPDATE.md  CRITICAL_FIXES_APPLIED.md  DATA_ORGANIZATION.md  DEBUG_BREAKPOINTS.md  DEPENDENCY_DIAGRAM.md  Dockerfile  EXAMPLE_NANITE_ASSEMBLY.usda  EXPORT_OPTIMIZATION.md  FBX_NANITE_ASSEMBLY.md  FINAL_FIX_COMMIT_4cea271.md  GEODESIC_BINDING_FIX.md  GROVE_API_FEATURES.md  GROVE_PHYSICS_INTEGRATION.md  GROWPY_GUIDE.md  HEIGHT_MONITORING_FEATURE.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  LINEAR_WORKSPACE_GUIDE.md  (+148 more)
.claude/: CLAUDE.md  instructions.md  settings.local.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/instructions/: linear.instructions.md
.github/workflows/: ci.yml  mirror-back.yml
config/: README.md  assets.toml  competition.toml  forest.toml  general.toml  growth_models.toml  quality.toml  tree_asset_lookup.csv  twigs.toml  unreal.toml
data/: CommonName-ScientificName-Model-Twig-BarkTexture.csv  main_structure_export.usda  pyramid_export.usda  scene_all_in_one.usda  tree_asset_lookup.csv
data/grove_blender_export/: beech_branches.usda
data/growth_models/: growth_analysis_summary.txt  species_analysis_metadata.json  species_growth_models.pkl  species_height_curves.json
data/input/: beech.csv  demo_forest.csv  illustration.csv  illustration_gis.csv  illustration_sections.gpkg  illustration_trees.gpkg  mini_tree_inventory_32632.csv  oak_test.csv  pilot_species.csv  pine.csv  small_demo.csv  stand_1tree_beech.csv  stand_1tree_birch.csv  stand_1tree_fir.csv  stand_1tree_maple.csv  stand_1tree_oak.csv  stand_1tree_pine.csv  stand_2trees_beech.csv  stand_2trees_beechmaple.csv  stand_2trees_maple.csv  stand_4trees_beechmaple.csv  stand_4trees_deciduous.csv  stand_5trees_beech.csv  stand_5trees_beechmaple.csv  stand_5trees_mixed.csv  stand_6trees.csv  stand_9trees_beech.csv  stand_9trees_birch.csv  stand_9trees_fir.csv  stand_9trees_maple.csv  stand_9trees_oak.csv  stand_9trees_pine.csv  test.csv  test_.csv  test_beech.csv  test_minimal.csv  test_quick.csv  test_single.csv  test_smooth_compare.csv  test_species.csv  (+1 more)
data/sandbox/: ScotsPineTwig.usda  demo_arrow_twig.usda  demo_tree.usda  demo_tree_with_twigs.usda  main.usda  main_test_manual_xforms.usda  main_test_minimal.usda  main_test_no_orientations.usda  main_test_orientationsf.usda  main_with_prototype.usda  prototype.usda  simplified_beech_twig.usda  test_tree.usda
data/skeletal_nanite_assembly_reference/: merged_assembly.usda  nanite_assembly.usda  tree.usda  twig.usda
data/test_files/: demo_assembly_external_ref.usda  demo_assembly_skel.usda
data/unreal_schema/: README.md
data/working_assemblies/: demo_tree_skel.usda  demo_twig_skel.usda
data/working_assemblies_working_skel/: SKELETAL_ASSEMBLY_REFERENCE.md  demo_assembly_external_ref.usda  demo_tree_skel.usda  demo_twig_skel.usda
data/working_assemblies_working_skel copy/: demo_twig_skel.usda
docs/: ASSET_LOOKUP_IMPROVEMENTS_SUMMARY.md  BARK_TEXTURE_UPDATE.md  BLENDER_EXPORT_SPLIT_PLAN.md  BPY_BUNDLED_USD_SOLUTION.md  BRANCH_BINDING_ANALYSIS.md  CLEANUP_SUMMARY.md  CONFIGURATION_UPDATES.md  CONFIG_SPLIT_TESTS_PASSED.md  DOCUMENTATION_STRUCTURE.md  EXPORT_LOOP_STRUCTURE_ANALYSIS.md  Export_Module_Documentation.md  GETTING_STARTED.md  GROVE_API_ATTRIBUTES.md  GROWPY_FUNCTIONAL_DESCRIPTION.md  GROWPY_IMPROVEMENT_PLAN.md  GROWPY_OPTIMIZATION_RECOMMENDATIONS.md  IMPORT_ISSUES.md  LOOKUP_IMPROVEMENTS.md  LOOKUP_INTEGRATION_VERIFICATION.md  MOUNT_POINT_INTEGRATION_COMPLETE.md  Mixing species.md  NANITE_CLEAN_EXPORT.md  PERFORMANCE_OPTIMIZATION.md  PLANTPROFILE_REFERENCE.md  PVE_ATTRIBUTE_REFERENCE.md  PVE_IMPLEMENTATION_COMPLETE.md  PVE_IMPLEMENTATION_SUMMARY.md  PVE_JSON_FIXES_SUMMARY.md  PVE_JSON_FORMAT_FIX.md  PVE_JSON_ISSUES_AND_FIXES.md  PVE_JSON_REVERSE_ENGINEERING.md  PVE_MISSING_DATA_ANALYSIS.md  PVE_PRESET_WORKFLOW.md  PVE_QUICK_START.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  SEGMENT_BASED_SKINNING_SUCCESS.md  SKELETON_FIX_GROVE_TAG_BONE_ID.md  TODO_PERFORMANCE_OPTIMIZATIONS.md  (+47 more)
docs/architecture/: README.md  data-flow.md  generate-forest-refactoring-plan.md  module-graph.md  module-reference.md  pipeline-overview.md  processing-logic.md
docs/archive/: ASSEMBLY_SKINNING_ISSUE.md  BEECH_JSON_VALIDATION_REPORT.md  BINDJOINT S_RESTORATION_COMPLETE.md  BLENDER_EXPORT_MIGRATION_STRATEGY.md  BONES_INFO_SKELETON_IMPROVEMENT.md  BONE_TAGGING_ANALYSIS.md  BPY_BUNDLED_USD_SOLUTION.md  BUDDEVELOPMENT_ROOT_CAUSE.md  (+98 more)
memory/: MEMORY.md  task_plan.md
paper/: softwarex_draft_v1.md
scripts/: generate_arch_diagrams.sh
src/: compare_grove_outputs.py  nanite_assembly_generator.py  pytest.ini  test_grove.py  test_growpy.py  test_simple.py  the-grove-output-complete.py  the-grove-output-usd.py  verify_skel_simple.py  verify_skeletal_structure.py  verify_skeleton_hierarchy.py  verify_skeleton_topology.py
tests/: README.md  test_export_naming.py  test_naming.py
tmp/: add_gbif_keys.py  backfill_species_info.py  query_gbif_keys.py  regen_overview.py  test_bpy_min.py
(+970 files in other folders)
