[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "growpy"
version = "0.2.0"
description = "Grove API Integration for Unreal Engine 5 Nanite"
license = "AGPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=1.3.0",
    "tqdm>=4.60.0",
    "joblib>=1.2.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "Pillow>=9.0.0",
    "pylometree @ git+https://github.com/XRFutureForests/pylometree.git",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=22.0.0", "ruff>=0.0.250", "mypy>=1.0.0"]
export = ["usd-core>=23.11"]
monitor = ["psutil>=5.9.0"]
species = ["pygbif>=0.6.0"]

[project.scripts]
growpy-init-config = "growpy.cli.init_config:main"
growpy-prepare-assets = "growpy.cli.prepare_assets:main"
growpy-convert-twigs = "growpy.cli.convert_twigs:main"
growpy-create-models = "growpy.cli.create_growth_models:main"
growpy-generate-forest = "growpy.cli.generate_forest:main"
growpy-dataset-pipeline = "growpy.cli.dataset_pipeline:main"
growpy-ue-exec = "growpy.tools.ue_exec:main"
growpy-analyze-usda = "growpy.tools.analyze_usda:main"
growpy-diagnose-growth = "growpy.tools.diagnose_growth:main"
growpy-visualize-tree = "growpy.tools.visualize_tree:main"
growpy-sensitivity-analysis = "growpy.cli.sensitivity_analysis:main"

[tool.setuptools]
packages = ["growpy", "growpy.config.templates", "the_grove_23_core"]
package-dir = { "" = "src", "the_grove_23_core" = "src/the_grove_23/modules/the_grove_23_core" }

[tool.setuptools.package-data]
"growpy.config.templates" = ["*.toml", "*.csv", "*.md"]

[tool.pytest.ini_options]
pythonpath = ["src", "src/the_grove_23/modules"]
testpaths = ["src/growpy/tests"]

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 88
extend-exclude = ["src/the_grove_23"]

[tool.ruff.lint]
# Pyflakes (F), pycodestyle (E/W), isort (I), pyupgrade (UP), bugbear (B), comprehensions (C4)
select = ["E", "F", "W", "I", "UP", "B", "C4"]
# E402: bpy/pxr modules legitimately import after expose_bundled_modules() shim.
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
# __init__.py re-exports and test helper imports are intentional.
"__init__.py" = ["F401"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.mypy]
python_version = "3.11"
files = ["src/growpy"]
exclude = "src/the_grove_23"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
